--- a/css-scss/main.scss
+++ b/css-scss/main.scss
@@ -1,4 +1,4 @@
-@import "./partials/variables", "./partials/functions";
+@import './partials/variables', './partials/functions';
 
 .main a {
   text-decoration: none;
@@ -123,6 +123,17 @@
   line-height: lineHeight(21, 11);
   margin: 0.8rem 1.95rem 0 1.95rem;
   text-align: center;
+}
+
+.successMessage {
+  background-color: $color-white;
+  border-radius: 10px;
+  box-shadow: 0 8px 0 rgba(0, 0, 0, 0.15);
+  // display: flex;
+  flex-direction: column;
+  margin-top: 2.4rem;
+  padding: 2.4rem;
+  display: none;
 }
 
 /***********************************************************/
