--- a/css-scss/main.scss
+++ b/css-scss/main.scss
@@ -66,6 +66,10 @@
   line-height: lineHeight(26, 14);
 }
 
+.outline-on-focus {
+  outline: 1px solid #5e54a4;
+}
+
 .form__box:focus {
   border: 2px red solid;
 }
